deployments/base/speedtest/speed-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: speedtest-pod
  namespace: random-workloads
  labels:
    app.kubernetes.io/name: speedtest-pod
spec:
  containers:
    - name: speedtest
      image: openspeedtest/latest
      ports:
        - containerPort: 3000
