deployments/base/speedtest/speed-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-service
  namespace: random-workloads
spec:
  selector:
    app.kubernetes.io/name: speedtest-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
